--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@socket.io/redis-adapter": "^8.0.0",
     "compression": "^1.7.4",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^6.0.0",
     "hpp": "^0.2.3",
     "http-status-codes": "^2.2.0",
     "mongoose": "^6.7.2",
+    "redis": "^4.5.1",
+    "socket.io": "^4.5.4",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
